# cast-iron

./: Dockerfile  Makefile  README.md  docker-compose.cast-iron.yml  docker-compose.yml  pyproject.toml  run.sh
etl/: __main__.py  config.py  event_processor.py  file_processor_config.py  path_helpers.py  pizza_tracker.py  util.py
etl/messaging/: kafka.py
etl/object_store/: interfaces.py  minio.py
etl/tasking/: faust.py  interfaces.py
tests/: test_path_helpers.py
